# picoSynth

./: .gitmodules  CMakeLists.txt  README.md  index.md
Source/: CMakeLists.txt  Synth.h  SynthBase.h  SynthVoice.h  dinkySynth.cpp  picoSynth.cpp
Source/Casio/: index.md
Source/Casio/VL1/: Synth.h  index.md
Source/Juno106/: CMakeLists.txt  Synth.h  Traits.h  Voice.h
Source/Roland/: index.md
Source/Roland/SH-101/: Control.h  Patch.cpp  Patch.h  Synth.h  Voice.h
Source/SIG/: Adsr.h  CMakeLists.txt  Conv.h  Delay.h  FBComb.h  FFComb.h  Gain.h  LfoEnv.h  Noise.h  OscBase.h  PulseOsc.h  PwmOsc.h  RampOsc.h  SIG.h  Sample.h  Table_amp15.py  Table_amp7.py  Table_delta14_7.py  Table_gain7.py  TriOsc.h  Types.h
Source/SIG/Filter/: BiQuad.h  FBComb.h  FFComb.h  FirstOrder.h  Type.h
Source/SIG/Osc/: Base.h  Noise.h  Osc.h  Pulse.h  Pwm.h  PwmPos.h  Ramp.h  Sine.h  Square.h  Triangle.h
Source/SIG/test/: testOsc.cpp
Source/Synth/: MidiController.h  SynthVoice.h
Source/inst/: CMakeLists.txt  Control.h  MidiController.h  Synth.h  SynthRack.h  SynthVoice.h
Source/inst/AcornProton/: Synth.h
Source/inst/BBCMicro/: Effect.h  Patch.h  Synth.h  Voice.h
Source/inst/Casio/VL1/: Voice.h
Source/inst/FuncGen/: Voice.h
Source/inst/Generic/PhysM/: Synth.h
Source/inst/Generic/Simple/: Synth.h
Source/inst/Juno106/: CMakeLists.txt  Effect.h  Synth.h  Voice.h
Source/inst/PhysM/: CMakeLists.txt  Effect.h  Synth.h  Voice.h
Source/inst/Roland/Juno-106/: Effect.h
Source/inst/Roland/SH-101/: Control.h  Patch.cpp  Patch.h  Synth.h  Voice.h
Source/inst/Roland/TB-303/: Synth.h  Voice.h
Source/inst/Simple/: Control.h  Effect.h  Patch.h  Synth.h  Voice.h
Source/inst/Synth/: CMakeLists.txt  Synth.h
Source/inst/TB-303/: CMakeLists.txt  Patch.h  Synth.h  Voice.h
Source/inst/VL1/: CMakeLists.txt  Effect.h  Program.cpp  Program.h  Synth.h  Voice.h
