#------------------------------------------------------------------------------
# Copyright (c) 2025 John D. Haughton
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------

add_subdirectory(VL1)
add_subdirectory(Juno106)
add_subdirectory(PhysM)
add_subdirectory(Simple)
add_subdirectory(TB-303)
