#------------------------------------------------------------------------------
# Copyright (c) 2025 John D. Haughton
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------

add_library(VL1 STATIC Program.cpp)

target_include_directories(VL1 PUBLIC ..)
